--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 
 header, footer {
   display: flex;
-  min-height: 100px;
+  min-height: 15vh;
   justify-content: space-between;
   align-items: center;
   background-color: var(--color-oscuro);
@@ -40,7 +40,7 @@ nav, .footer-info {
 }
 
 .header-title {
-  font-size: x-large;
+  font-size: calc(15px + 2vh);
 }
 
 ul {
@@ -74,13 +74,21 @@ a {
   background-color: var(--color-claro);
 }
 
+h2, button {
+  font-size: calc(5px + 2vh);
+}
+
+p {
+  font-size: calc(3px + 2vh);
+}
+
 .home-title {
-  font-size: 10vh;
+  font-size: calc(30px + 2vh);
   font-weight: 1000;
 }
 
 .section-title {
-  font-size: xx-large;
+  font-size: calc(30px + 2vh);
   font-weight: 1000;
 }
 
@@ -98,7 +106,7 @@ a {
 
 .about-text {
   columns: 2;
-  width: 60%;
+  width: calc(70% + 10vw);
   text-align: justify;
   column-gap: 30px;
 }
@@ -122,4 +130,35 @@ a {
 .contact-input {
   height: 30px;
 }
+
+button {
+  display: inline-block;
+  width: fit-content;
+  padding: 10px 20px;
+  border: none;
+  background-color: var(--color-medio);
+  color: #f5f5f5;
+  text-align: center;
+  text-decoration: none;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+button:hover {
+  background-color: #e0e0e0;
+}
+
+button:focus {
+  outline: none;
+  box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.4);
+}
+
+button:active {
+  background-color: #ccc;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+
 
